

2023-09-03 Franz Holzinger <franz@ttproducts.de>
    * compatibility TYPO3 11.5: remove FilePathSanitizer for files which are not shown directly in the front end.

2022-10-26 Franz Holzinger <franz@ttproducts.de>
    * bugfix: Set correct path for flexform. pi/flexform_ds_pi.xml -> Configuration/FlexForms/flexform_ds.xml
    * bugfix: Set relative language file path of flexform to Resources/Private/Language.

2022-09-19 Franz Holzinger <franz@ttproducts.de>
    * compatibility TYPO3 8.7: deprecation no 77934: The field `select_key` of the table `tt_content` is not used in the core and has been removed.

2022-02-24 Franz Holzinger  <franz@ttproducts.de>
    * Add support for PHP 8
    * Replace PATH_site

2022-02-22 Franz Holzinger  <franz@ttproducts.de>
    * compatibility 9: replace PATH_site by \TYPO3\CMS\Core\Core\Environment::getPublicPath() . '/' 

2022-02-21 Franz Holzinger  <franz@ttproducts.de>
    Deprecation no.94312: - Remove loginSecurityLevel for FE and BE

2022-02-17 Franz Holzinger  <franz@ttproducts.de>
    Deprecation no.81852: - Deprecate usage of rsaauth

2021-12-16 Franz Holzinger  <franz@ttproducts.de>
    * support for TYPO3 10.x

2020-11-20 Franz Holzinger  <franz@ttproducts.de>
    * bugfix for TYPO3 9.5: Use the classes \TYPO3\CMS\Core\Crypto\PasswordHashing\SaltedPasswordService instead of \TYPO3\CMS\Saltedpasswords\SaltedPasswordService and  \TYPO3\CMS\Core\Crypto\PasswordHashing\PasswordHashFactor instead of \TYPO3\CMS\Saltedpasswords\Salt\SaltFactory

2020-10-29 Franz Holzinger  <franz@ttproducts.de>
    * workaround for bug in TYPO3 9.5.22: ExtensionManagementUtility::isLoaded for saltedpasswords must not be true.

2020-06-20 Franz Holzinger  <franz@ttproducts.de>
    * new feature: the locallange setup shall be merged to the already present items of the TCA for radio or select. E.g. you can override the gender and the status by a locallang setup. You the constants mergeLabels to activate this feature.